test-data/invalid/unknown-subckt.cir
* Unknown subcircuit reference
X1 a b missingbuf
.end
